[gd_scene load_steps=5 format=3 uid="uid://bqmj8gxrwkdgu"]

[ext_resource type="Script" path="res://views/environment/env_script/env_shelf_01.gd" id="1_v8jai"]
[ext_resource type="Texture2D" uid="uid://dk7gqtk15224g" path="res://views/environment/env_assets/brownshelf.png" id="2_73snl"]
[ext_resource type="PackedScene" uid="uid://dku8nyvyjlaaa" path="res://scenes/env_shelf_spot.tscn" id="3_m0ia7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_006hc"]
size = Vector2(312, 226)

[node name="EnvShelf01" type="StaticBody2D"]
position = Vector2(191, 133)
script = ExtResource("1_v8jai")

[node name="ShelfSprite" type="Sprite2D" parent="."]
position = Vector2(-191, -133)
scale = Vector2(0.271507, 0.245328)
texture = ExtResource("2_73snl")
centered = false

[node name="ShelfCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-6, 4)
shape = SubResource("RectangleShape2D_006hc")

[node name="ShelfSpot01" parent="." instance=ExtResource("3_m0ia7")]
position = Vector2(-161, -109)

[node name="ShelfSpot02" parent="." instance=ExtResource("3_m0ia7")]
position = Vector2(10, -109)

[node name="ShelfSpot03" parent="." instance=ExtResource("3_m0ia7")]
position = Vector2(10, 6)

[node name="ShelfSpot04" parent="." instance=ExtResource("3_m0ia7")]
position = Vector2(-161, 6)
